fix: Header icons were not fully visible on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     
     font-family: Ginto;
 }
